Fix crash on closing a second document

We accidentially deleted the actions too early. The actions were delete before
m_gui. The fix is to move the accessing to the destructor of the view where the actions are
still around.

BUG:336145